--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-description = "A powerful browser crawler for web vulnerability scanners"
-name = "Demon"
+description = "Demon is a powerful browser crawler for web vulnerability scanners"
+name = "demon"
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0"
@@ -26,5 +26,13 @@ codegen-units = 4
 
 [dependencies]
 env_logger = "0.10"
-rust-headless-chrome = "1.0.8"
-
+headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", features = ["fetch"], default-features = false }
+anyhow = "1.0.76"
+clap = { version = "4.1", default-features = false, features = [
+    "std",
+    "help",
+    "usage",
+    "suggestions",
+    "cargo",
+] }
+log = "0.4.20"
