chore: use cargo fmt

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,20 +5,20 @@ on:
     branches: [ main ]
 
 jobs:
-  #  format:
-  #    name: cargo fmt
-  #    runs-on: ubuntu-latest
-  #    steps:
-  #      - uses: actions/checkout@v4
-  #
-  #      - name: Setup toolchain
-  #        uses: dtolnay/rust-toolchain@master
-  #        with:
-  #          toolchain: nightly
-  #          components: rustfmt
-  #
-  #      - name: Run fmt
-  #        run: cargo +nightly fmt --all -- --check --unstable-features
+  format:
+    name: cargo fmt
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Setup toolchain
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: nightly
+          components: rustfmt
+
+      - name: Run fmt
+        run: cargo fmt --all -- --check --unstable-features
 
   cargo-clippy:
     name: cargo clippy
