--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,6 @@ clap = { version = "4.1", default-features = false, features = [
     "cargo",
 ] }
 log = "0.4.20"
+toml = "0.8.8"
+rand = "0.8.5"
+once_cell = "1.19.0"
