--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,4 @@ log = "0.4.20"
 toml = "0.8.8"
 rand = "0.8.5"
 once_cell = "1.19.0"
+reqwest = { version = "0.11.23", features = ["blocking", "json"] }
