--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ toml = "0.8.8"
 rand = "0.8.5"
 once_cell = "1.19.0"
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
+chrono = { version = "0.4", default-features = false, features = ["clock"] }
