--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,5 @@ rand = "0.8.5"
 once_cell = "1.19.0"
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
+serde_json = "1.0.108"
+serde = "1.0.193"
