--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,5 @@ reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
 serde_json = "1.0.108"
 serde = "1.0.193"
+serde-xml-rs = "0.6.0"
+serde_derive = "1.0.194"
