--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,3 +50,4 @@ serde_derive = "1.0.194"
 regex = "1.10.2"
 url = "2.5.0"
 tokio = { version = "1.35.1", features = ["full"] }
+dashmap = { version = "5.4", features = ["serde"] }
