--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,3 +51,4 @@ regex = "1.10.2"
 url = "2.5.0"
 tokio = { version = "1.35.1", features = ["full"] }
 dashmap = { version = "5.4", features = ["serde"] }
+futures = "0.3.30"
